--- a/IssuesApp.rx/Base.lproj/Main.storyboard
+++ b/IssuesApp.rx/Base.lproj/Main.storyboard
@@ -10,19 +10,59 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Login View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="IssuesApp_rx" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LoginViewController" id="BYZ-38-t0r" customClass="LoginViewController" customModule="IssuesApp_rx" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="cPC-Tj-GTn">
+                                <rect key="frame" x="125" y="50" width="125" height="320"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="N7F-cj-fm0">
+                                        <rect key="frame" x="0.0" y="0.0" width="125" height="150"/>
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="800" verticalHuggingPriority="251" horizontalCompressionResistancePriority="800" image="Octocat" translatesAutoresizingMaskIntoConstraints="NO" id="sVX-Xu-yGd">
+                                                <rect key="frame" x="0.0" y="0.0" width="125" height="120"/>
+                                            </imageView>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JCz-7E-icu">
+                                                <rect key="frame" x="0.0" y="120" width="125" height="30"/>
+                                                <state key="normal" title="Login to GitHub"/>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="09j-WU-day">
+                                        <rect key="frame" x="0.0" y="170" width="125" height="150"/>
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="800" verticalHuggingPriority="251" horizontalCompressionResistancePriority="800" image="bitbucket" translatesAutoresizingMaskIntoConstraints="NO" id="mcA-DD-AG7">
+                                                <rect key="frame" x="0.0" y="0.0" width="125" height="120"/>
+                                            </imageView>
+                                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="1000" horizontalCompressionResistancePriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FdH-Zh-EtL">
+                                                <rect key="frame" x="0.0" y="120" width="125" height="30"/>
+                                                <state key="normal" title="Login to BitBucket"/>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="cPC-Tj-GTn" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="SKZ-vH-TTx"/>
+                            <constraint firstItem="cPC-Tj-GTn" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="30" id="TKH-HI-FXZ"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="loginToBitBucketButton" destination="FdH-Zh-EtL" id="DL6-xb-wvk"/>
+                        <outlet property="loginToGitHubButton" destination="JCz-7E-icu" id="MGY-iW-dCQ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-87.200000000000003" y="-152.47376311844079"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="IpM-Wk-fqC">
@@ -140,4 +180,8 @@
             <point key="canvasLocation" x="1421" y="797"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Octocat" width="120" height="120"/>
+        <image name="bitbucket" width="120" height="120"/>
+    </resources>
 </document>
