--- a/IssuesApp.rx/Base.lproj/Main.storyboard
+++ b/IssuesApp.rx/Base.lproj/Main.storyboard
@@ -62,13 +62,13 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-87.200000000000003" y="-152.47376311844079"/>
+            <point key="canvasLocation" x="820" y="516"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="KtQ-lt-38R">
             <objects>
                 <navigationController id="ine-a7-eE4" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" userInteractionEnabled="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="2mh-Pn-dWD">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="2mh-Pn-dWD">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="tintColor" white="0.86472800930000004" alpha="1" colorSpace="calibratedWhite"/>
@@ -83,7 +83,81 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dCl-t6-6jc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="865" y="-159"/>
+            <point key="canvasLocation" x="820" y="-161"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="272-wy-egi">
+            <objects>
+                <navigationController id="yre-pR-lZY" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Vhv-gw-DhN">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" white="0.86472800930000004" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="barTintColor" white="0.20000000000000001" alpha="1" colorSpace="calibratedWhite"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="0.86472800930000004" alpha="1" colorSpace="calibratedWhite"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="ZX6-wW-7oW" kind="relationship" relationship="rootViewController" id="br7-sT-k18"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="is2-ql-dm0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="865" y="-868"/>
+        </scene>
+        <!--Repos-->
+        <scene sceneID="XlJ-Df-qxz">
+            <objects>
+                <viewController id="ZX6-wW-7oW" customClass="ReposViewController" customModule="IssuesApp_rx" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="FB0-bo-zl5">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="12p-XR-4BC">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="RepoCell" textLabel="dN8-gE-QsU" style="IBUITableViewCellStyleDefault" id="9uu-XT-e8S">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="9uu-XT-e8S" id="mXv-ro-W4N">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="dN8-gE-QsU">
+                                                    <rect key="frame" x="15" y="0.0" width="345" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="vF6-mV-6za" firstAttribute="bottom" secondItem="12p-XR-4BC" secondAttribute="bottom" id="GnB-7Y-JAb"/>
+                            <constraint firstItem="vF6-mV-6za" firstAttribute="trailing" secondItem="12p-XR-4BC" secondAttribute="trailing" id="JfY-8g-07y"/>
+                            <constraint firstItem="12p-XR-4BC" firstAttribute="top" secondItem="vF6-mV-6za" secondAttribute="top" id="azW-gZ-3Cb"/>
+                            <constraint firstItem="12p-XR-4BC" firstAttribute="leading" secondItem="vF6-mV-6za" secondAttribute="leading" id="dw6-0q-q3Z"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="vF6-mV-6za"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Repos" id="gva-EE-AEP">
+                        <barButtonItem key="rightBarButtonItem" systemItem="stop" id="Srl-Dq-TqR"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="closeButton" destination="Srl-Dq-TqR" id="gAz-S8-jrs"/>
+                        <outlet property="tableView" destination="12p-XR-4BC" id="vHa-vg-88r"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="N5c-5L-ix2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1702" y="-868"/>
         </scene>
         <!--Repo-->
         <scene sceneID="syX-4V-xSC">
@@ -133,6 +207,9 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="njo-zH-2Qk">
                                         <rect key="frame" x="0.0" y="92" width="343" height="30"/>
                                         <state key="normal" title="Enter"/>
+                                        <connections>
+                                            <segue destination="x7F-jc-i2i" kind="show" identifier="pushToIssueSegue" id="rSj-tV-3qg"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yzv-Os-dVG">
                                         <rect key="frame" x="0.0" y="138" width="343" height="30"/>
@@ -153,7 +230,11 @@
                         <viewLayoutGuide key="safeArea" id="2tO-S1-gyf"/>
                     </view>
                     <navigationItem key="navigationItem" title="Repo" id="l93-Ig-OP1">
-                        <barButtonItem key="rightBarButtonItem" systemItem="bookmarks" id="dvn-8A-Mlw"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="bookmarks" id="aPG-Ei-NLX">
+                            <connections>
+                                <segue destination="yre-pR-lZY" kind="presentation" identifier="presentToReposSegue" id="war-JR-h7k"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="enterButton" destination="njo-zH-2Qk" id="WQn-d7-S75"/>
@@ -164,7 +245,22 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cox-Vk-ZNB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1703" y="-160"/>
+            <point key="canvasLocation" x="1713" y="-160"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="caP-6k-3Fs">
+            <objects>
+                <viewController id="x7F-jc-i2i" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ELV-pd-JS9">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="Hfy-tk-PWq"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GAh-Pa-08Q" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2674" y="-161"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="IpM-Wk-fqC">
@@ -180,7 +276,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8fd-uZ-cV2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-34" y="787"/>
+            <point key="canvasLocation" x="50" y="1193"/>
         </scene>
         <!--Test1 View Controller-->
         <scene sceneID="i5T-Ii-kYb">
@@ -238,7 +334,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kRv-68-NDM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="741.60000000000002" y="786.65667166416802"/>
+            <point key="canvasLocation" x="826" y="1193"/>
         </scene>
         <!--Test2 View Controller-->
         <scene sceneID="7Bz-bc-Ruk">
@@ -279,7 +375,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dND-Pj-6fd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1421" y="797"/>
+            <point key="canvasLocation" x="1505" y="1203"/>
         </scene>
     </scenes>
     <resources>
