--- a/IssuesApp.rx/Base.lproj/Main.storyboard
+++ b/IssuesApp.rx/Base.lproj/Main.storyboard
@@ -254,13 +254,39 @@
                     <view key="view" contentMode="scaleToFill" id="ELV-pd-JS9">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Kui-Uf-EXy">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Sos-SD-CFI">
+                                    <size key="itemSize" width="375" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="50" height="50"/>
+                                    <inset key="sectionInset" minX="0.0" minY="20" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells/>
+                                <collectionReusableView key="sectionFooterView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="LoadMoreCell" id="gT7-L7-Enz" customClass="LoadMoreCell" customModule="GithubIssues_Rx" customModuleProvider="target">
+                                    <rect key="frame" x="0.0" y="20" width="375" height="50"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </collectionReusableView>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Kui-Uf-EXy" firstAttribute="leading" secondItem="Hfy-tk-PWq" secondAttribute="leading" id="8BP-pQ-DbE"/>
+                            <constraint firstItem="Kui-Uf-EXy" firstAttribute="bottom" secondItem="Hfy-tk-PWq" secondAttribute="bottom" id="kWA-E8-pvB"/>
+                            <constraint firstItem="Kui-Uf-EXy" firstAttribute="trailing" secondItem="Hfy-tk-PWq" secondAttribute="trailing" id="mu1-Ij-dda"/>
+                            <constraint firstItem="Kui-Uf-EXy" firstAttribute="top" secondItem="Hfy-tk-PWq" secondAttribute="top" id="u9U-Tj-3HP"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Hfy-tk-PWq"/>
                     </view>
+                    <connections>
+                        <outlet property="collectionView" destination="Kui-Uf-EXy" id="7Hv-TF-aDj"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GAh-Pa-08Q" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2674" y="-161"/>
+            <point key="canvasLocation" x="2672.8000000000002" y="-161.46926536731635"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="IpM-Wk-fqC">
