--- a/IssuesApp.rx/Base.lproj/Main.storyboard
+++ b/IssuesApp.rx/Base.lproj/Main.storyboard
@@ -265,7 +265,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="20" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells/>
-                                <collectionReusableView key="sectionFooterView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="LoadMoreCell" id="gT7-L7-Enz" customClass="LoadMoreCell" customModule="GithubIssues_Rx" customModuleProvider="target">
+                                <collectionReusableView key="sectionFooterView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="LoadMoreCell" id="gT7-L7-Enz" customClass="LoadMoreCell" customModule="IssuesApp_rx" customModuleProvider="target">
                                     <rect key="frame" x="0.0" y="20" width="375" height="50"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </collectionReusableView>
@@ -282,11 +282,46 @@
                     </view>
                     <connections>
                         <outlet property="collectionView" destination="Kui-Uf-EXy" id="7Hv-TF-aDj"/>
+                        <segue destination="cI5-1d-ljB" kind="show" id="QaX-no-gIl"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GAh-Pa-08Q" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2672.8000000000002" y="-161.46926536731635"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="KCE-Dq-G8Y">
+            <objects>
+                <viewController id="cI5-1d-ljB" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="HGW-Nf-ZXS">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Ofj-pr-oGk">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="zxu-Ci-IaY">
+                                    <size key="itemSize" width="375" height="107"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells/>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Ofj-pr-oGk" firstAttribute="leading" secondItem="Pes-OK-ZLw" secondAttribute="leading" id="2ON-Eb-MWC"/>
+                            <constraint firstItem="Pes-OK-ZLw" firstAttribute="bottom" secondItem="Ofj-pr-oGk" secondAttribute="bottom" id="QYr-gX-kok"/>
+                            <constraint firstItem="Pes-OK-ZLw" firstAttribute="trailing" secondItem="Ofj-pr-oGk" secondAttribute="trailing" id="gA7-u7-6A3"/>
+                            <constraint firstItem="Ofj-pr-oGk" firstAttribute="top" secondItem="Pes-OK-ZLw" secondAttribute="top" id="lNT-wh-2Nd"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Pes-OK-ZLw"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="k80-bx-0ks" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3428" y="-161.46926536731635"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="IpM-Wk-fqC">
