--- a/IssuesApp.rx/View/Cell/CommentCell.xib
+++ b/IssuesApp.rx/View/Cell/CommentCell.xib
@@ -55,10 +55,10 @@
                                         <edgeInsets key="layoutMargins" top="8" left="16" bottom="8" right="16"/>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AMD-EY-fIg">
-                                        <rect key="frame" x="0.0" y="31.5" width="256" height="42.5"/>
+                                        <rect key="frame" x="0.0" y="30.5" width="256" height="43.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="body" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AdX-hJ-2rr">
-                                                <rect key="frame" x="16" y="8" width="224" height="26.5"/>
+                                                <rect key="frame" x="16" y="8" width="224" height="27.5"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <edgeInsets key="layoutMargins" top="8" left="16" bottom="8" right="16"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
@@ -79,7 +79,7 @@
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="fdl-2H-JIa" secondAttribute="trailing" id="PhY-db-SRR"/>
                                     <constraint firstItem="AMD-EY-fIg" firstAttribute="leading" secondItem="kYw-MB-QBD" secondAttribute="leading" id="Wrl-FW-11h"/>
-                                    <constraint firstItem="AMD-EY-fIg" firstAttribute="top" secondItem="fdl-2H-JIa" secondAttribute="bottom" constant="1" id="cmW-z3-S93"/>
+                                    <constraint firstItem="AMD-EY-fIg" firstAttribute="top" secondItem="fdl-2H-JIa" secondAttribute="bottom" id="cmW-z3-S93"/>
                                     <constraint firstItem="fdl-2H-JIa" firstAttribute="leading" secondItem="kYw-MB-QBD" secondAttribute="leading" id="e0X-xF-Zia"/>
                                     <constraint firstAttribute="trailing" secondItem="AMD-EY-fIg" secondAttribute="trailing" id="eQ4-a7-6ld"/>
                                     <constraint firstAttribute="bottom" secondItem="AMD-EY-fIg" secondAttribute="bottom" id="oC8-If-D55"/>
