--- a/IssuesApp.rx/Base.lproj/Main.storyboard
+++ b/IssuesApp.rx/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ine-a7-eE4">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ine-a7-eE4">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -297,7 +297,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Ofj-pr-oGk">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" keyboardDismissMode="interactive" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Ofj-pr-oGk">
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="zxu-Ci-IaY">
@@ -316,18 +316,50 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                 </collectionReusableView>
                             </collectionView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="e8V-c0-K6T">
+                                <rect key="frame" x="0.0" y="621" width="375" height="46"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J2j-DJ-7eT">
+                                        <rect key="frame" x="325" y="6" width="42" height="34"/>
+                                        <state key="normal" title="Send">
+                                            <color key="titleColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                    </button>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QZ0-Da-Wtd">
+                                        <rect key="frame" x="8" y="8" width="309" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="J2j-DJ-7eT" secondAttribute="trailing" constant="8" id="02A-rR-SUP"/>
+                                    <constraint firstAttribute="height" constant="46" id="CxS-tg-Dly"/>
+                                    <constraint firstItem="J2j-DJ-7eT" firstAttribute="centerY" secondItem="e8V-c0-K6T" secondAttribute="centerY" id="q3I-lU-Wsv"/>
+                                    <constraint firstItem="QZ0-Da-Wtd" firstAttribute="centerY" secondItem="J2j-DJ-7eT" secondAttribute="centerY" id="rab-WH-59k"/>
+                                    <constraint firstItem="QZ0-Da-Wtd" firstAttribute="leading" secondItem="e8V-c0-K6T" secondAttribute="leading" priority="999" constant="8" id="v1J-3j-DsX"/>
+                                    <constraint firstItem="J2j-DJ-7eT" firstAttribute="leading" secondItem="QZ0-Da-Wtd" secondAttribute="trailing" constant="8" id="w0G-Ye-dHw"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="Ofj-pr-oGk" firstAttribute="leading" secondItem="Pes-OK-ZLw" secondAttribute="leading" id="2ON-Eb-MWC"/>
                             <constraint firstItem="Pes-OK-ZLw" firstAttribute="bottom" secondItem="Ofj-pr-oGk" secondAttribute="bottom" id="QYr-gX-kok"/>
+                            <constraint firstItem="e8V-c0-K6T" firstAttribute="leading" secondItem="Pes-OK-ZLw" secondAttribute="leading" id="SQV-7c-UjG"/>
                             <constraint firstItem="Pes-OK-ZLw" firstAttribute="trailing" secondItem="Ofj-pr-oGk" secondAttribute="trailing" id="gA7-u7-6A3"/>
+                            <constraint firstItem="e8V-c0-K6T" firstAttribute="trailing" secondItem="Pes-OK-ZLw" secondAttribute="trailing" id="kEB-dq-sim"/>
                             <constraint firstItem="Ofj-pr-oGk" firstAttribute="top" secondItem="Pes-OK-ZLw" secondAttribute="top" id="lNT-wh-2Nd"/>
+                            <constraint firstItem="Pes-OK-ZLw" firstAttribute="bottom" secondItem="e8V-c0-K6T" secondAttribute="bottom" id="mqp-lh-ZFw"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Pes-OK-ZLw"/>
                     </view>
                     <connections>
                         <outlet property="collectionView" destination="Ofj-pr-oGk" id="7Ol-L5-VgM"/>
+                        <outlet property="commentTextField" destination="QZ0-Da-Wtd" id="yow-oA-mIH"/>
+                        <outlet property="inputViewBottomConstraint" destination="mqp-lh-ZFw" id="CpS-m8-TFX"/>
+                        <outlet property="sendButton" destination="J2j-DJ-7eT" id="aeE-Xu-kz3"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="k80-bx-0ks" userLabel="First Responder" sceneMemberID="firstResponder"/>
